New/force-app/main/default/objects/Account/fields/Id_Accounts_on_Target_Org__c.field-meta.xml
<CustomField>
    <fullName>Id_Accounts_on_Target_Org__c</fullName>
    <label>Id Accounts on Target Org</label>
    <type>TextArea</type>
</CustomField>