New/force-app/main/default/objects/Account/fields/Updated_By_Task__c.field-meta.xml
<CustomField>
    <fullName>Updated_By_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated By Task</label>
    <type>Checkbox</type>
</CustomField>